docs: changed titles

--- a/api-reference/chat_web.mdx
+++ b/api-reference/chat_web.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Alara Chat APIs"
-description: "Comprehensive API documentation for Alara's Chat Service"
+title: "Alara - Web APIs"
+description: "Comprehensive API documentation for Alara's Chat"
 version: "0.1.0"
 ---
 
