--- a/api-reference/chat_whatsapp.mdx
+++ b/api-reference/chat_whatsapp.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Bots API'
-description: 'API documentation for the XIVA CHAT SERVICE Bots API'
+title: 'Alara - WhatsApp API'
+description: 'API documentation for Alara's Chat with External Channels (e.g, WhatsApp)'
 api: 'POST /api/v1/bots/message'
 authentication: 'Bearer Token'
 ---
